# crypto-election

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  dc-node-dev.yml  dc-web-dev.yml  docker-compose-dev.yml  docker-compose-web-devel.yml  docker-compose.yml  start.sh  web.dockerfile
backend/: Cargo.toml
backend/src/: lib.rs  service.rs
cfg/: crypto-election.yaml  crypto-election.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs  model.rs  schema.rs  tx_behavior.rs
core/src/model/: geo.rs  mod.rs  public_api.rs  transactions.rs  wrappers.rs
core/src/proto/: db_models.proto  election.proto  mod.rs  transactions.proto
docs/: requirements.md
docs/puml/: entity-main.puml
frontend/: Cargo.toml
launcher/: Dockerfile  launch.sh
node/: Cargo.toml  Dockerfile  build.rs  dev.Dockerfile  launch-dev.sh  launch.sh  launch_test.sh
node/src/: api.rs  constant.rs  lib.rs  main.rs  proto.rs  service.rs  tx_behavior.rs
node/src/cli/: README.md  mod.rs  run_async.rs  run_async_as_master.rs
node/src/model/: geo.rs  mod.rs  public_api.rs  transactions.rs  wrappers.rs
node/src/schema/: administration_repository.rs  election_repository.rs  factory.rs  iter.rs  mod.rs  participant_repository.rs  participant_schema.rs  participant_schema_mut.rs  repository.rs
node/src/service/: mod.rs
node/src/service/blockchain/: exonum.rs  mod.rs
node/tests/: api.rs  constant.rs
proto/: db_models.proto  service.proto  transactions.proto  wrappers.proto
runtime/: Dockerfile  dockerfile  launch.sh
web/: Cargo.toml  Dockerfile  dev.Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
web/src/: App.vue  app.js  lib.rs  server.js
web/src/components/: Modal.vue  Navbar.vue  NavbarAdmin.vue  Spinner.vue
web/src/pages/: Auth.vue  AuthAdmin.vue  NewPoll.vue  Votes.vue  Wallet.vue  newPoll.vue
web/src/plugins/: blockchain.js
web/src/router/: index.js
web/src/store/: index.js
web/tests/: blockchain.test.js
