[package]
name = "crypto-election-core"
version = "0.1.0"
authors = ["Nikita Bibik <osbib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
exonum = "0.12.1"#{ git = "https://github.com/integrer/exonum" }
exonum-derive = "0.12.0"#{ git = "https://github.com/integrer/exonum" }
exonum-merkledb = "0.12.0"#{ git = "https://github.com/integrer/exonum" }
exonum-time = "0.12.0"#{ git = "https://github.com/integrer/exonum" }
#geo = "0.12.2"
failure = "0.1.6"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
protobuf = "2.8.1"

[dev-dependencies]
assert_matches = "1.3.0"
exonum-testkit = "0.12.0"#{ git = "https://github.com/integrer/exonum" }

[build-dependencies]
exonum-build = "0.12.0"#{ git = "https://github.com/integrer/exonum" }
