[package]
name = "crypto-election-core"
version = "0.1.0"
authors = ["Nikita Bibik <osbib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
exonum = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-derive = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-merkledb = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-time = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
geo = "0.12.2"
failure = "0.1.6"
lazy-init = "0.3.0"
protobuf = "2.8.0"
rand = "0.7.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
time = "0.1.42"

[dev-dependencies]
assert_matches = "1.3.0"
exonum-testkit = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }

[build-dependencies]
exonum-build = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
