[package]
name = "crypto-election-node"
version = "0.1.0"
authors = ["Nikita Bibik <osbib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-election-core = {version = "0.1.0", path = "../core"}
chrono = "0.4.9"
either = "1.5.3"
exonum = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-derive = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-merkledb = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-crypto = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-configuration = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
exonum-time = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
serde = "1.0.101"
serde_derive = "1.0.101"
failure = "0.1.6"
protobuf = "2.8.1"
time = "0.1.42"

[dev-dependencies]
exonum-testkit = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
serde_json = "1.0.41"
pretty_assertions = "0.6.1"
assert_matches = "1.3.0" # orig - 1.2.0
hex = "0.4.0" # orig - 0.3.2

[build-dependencies]
exonum-build = { git = "https://github.com/integrer/exonum", branch = "0-12-1-release" }
