[package]
name = "crypto-election-node"
version = "0.2.0"
authors = ["Nikita Bibik <osbib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
either = "1.5.3"
exonum = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-derive = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-merkledb = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-crypto = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-time = { git = "https://github.com/integrer/exonum", branch = "master" }
geo = "0.12.2"
failure = "0.1.6"
protobuf = "2.10"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
time = "0.2"

[dev-dependencies]
exonum-testkit = { git = "https://github.com/integrer/exonum", branch = "master" }
serde_json = "1.0"
pretty_assertions = "0.6.1"
assert_matches = "1.3.0"
hex = "0.4.0"

[build-dependencies]
exonum-build = { git = "https://github.com/integrer/exonum", branch = "master" }
