[package]
name = "crypto-election-node"
version = "0.2.0"
authors = ["Nikita Bibik <osbib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
time = "0.2"
either = "1.5.3"
failure = "0.1.6"

# Serialization
serde = "1.0"
serde_derive = "1.0"
protobuf = "2.10"

# Exonum framework
exonum = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-derive = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-merkledb = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-proto = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-cli = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-rust-runtime = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-crypto = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-time = { git = "https://github.com/integrer/exonum", branch = "master" }

geo = "0.12.2"
rand = "0.7"

[dev-dependencies]
exonum-explorer-service = { git = "https://github.com/integrer/exonum", branch = "master" }
exonum-testkit = { git = "https://github.com/integrer/exonum", branch = "master" }

assert_matches = "1.3.0"
bincode = "1.2.1"
hex = "0.4"
pretty_assertions = "0.6.1"
serde_json = "1.0"

[build-dependencies]
exonum-build = { git = "https://github.com/integrer/exonum", branch = "master" }

[features]
default = ["with-serde"]
with-serde = []
